--- a/test/index.html
+++ b/test/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8"> 
   <title>test</title>
-  <link rel="stylesheet" href="mocha.css">
+  <link rel="stylesheet" href="../build/build.css">
 </head>
 <body>
+
   <div id="mocha"></div>
+
   <script src="../build/build.js"></script>
-  <script src="mocha.js"></script>
-  <script>mocha.setup({ui:'bdd'})</script>
-  <script src="index.js"></script>
+  <script>require('visionmedia-mocha');</script>
+  <script>mocha.setup('bdd');</script>
+  <script src="test.js"></script>
   <script>mocha.run()</script>
 </body>
 </html>
